devops-k8s/k8s-learning/08.LoadBalance/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name:  dp-myapp-v1
  labels:
    type: dp-myapp-v1
spec:
  replicas: 1
  selector:
    matchLabels:
      type: myapp-v1
      podApp: myapp
  template:
    metadata:
      labels:
        type: myapp-v1
        podApp: myapp
    spec:
      containers:
        - name: foo
          image: yudady/myapp:v1
          ports:
            - containerPort: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name:  dp-myapp-v2
  labels:
    type: dp-myapp-v2
spec:
  replicas: 1
  selector:
    matchLabels:
      type: myapp-v2
      podApp: myapp
  template:
    metadata:
      labels:
        type: myapp-v2
        podApp: myapp
    spec:
      containers:
        - name: bar
          image: yudady/myapp:v2
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: svc-myapp
spec:
  selector:
    podApp: myapp
  type: LoadBalancer
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 80
